--- a/team.html
+++ b/team.html
@@ -9,19 +9,21 @@
 </head>
 <body>
     <!-- Навигация -->
-    <nav>
-        <div class="logo">
-            <span class="logo-icon">⚡</span>
-            <span class="logo-text">BLIZZ</span>
-            <span class="logo-blue">MOBILE</span>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="features.html">Возможности</a></li>
-            <li><a href="team.html" class="active">Руководство</a></li>
-        </ul>
-        <button class="play-btn" onclick="alert('Загрузка начнется в ближайшее время!')">▶ Играть</button>
-    </nav>
+<nav>
+    <div class="logo">
+        <span class="logo-icon">⚡</span>
+        <span class="logo-text">BLIZZ</span>
+        <span class="logo-blue">MOBILE</span>
+    </div>
+    <ul class="nav-links">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="features.html">Возможности</a></li>
+        <li><a href="gallery.html">Галерея</a></li>
+        <li><a href="team.html">Команда</a></li>
+        <li><a href="https://blizmobile.hgweb.ru/index.php" target="_blank" class="glow-link">Форум</a></li>
+        <li><a href="#" class="play-nav-btn" onclick="alert('Загрузка начнется скоро!')">Играть</a></li>
+    </ul>
+</nav>
 
     <!-- Заголовок страницы -->
     <section class="page-header">
@@ -183,4 +185,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
