--- a/features.html
+++ b/features.html
@@ -16,11 +16,10 @@
     </div>
     <ul class="nav-links">
         <li><a href="index.html">Главная</a></li>
-        <li><a href="features.html">Возможности</a></li>
-        <li><a href="gallery.html">Галерея</a></li>
+        <li><a href="features.html">Инфо</a></li>
         <li><a href="team.html">Команда</a></li>
-        <li><a href="https://blizmobile.hgweb.ru/index.php" target="_blank" class="glow-link">Форум</a></li>
-        <li><a href="#" class="play-nav-btn" onclick="alert('Загрузка начнется скоро!')">Играть</a></li>
+        <li><a href="https://blizmobile.hgweb.ru/index.php" target="_blank" class="glow-forum">Форум</a></li>
+        <li><a href="#" class="glow-play" onclick="alert('Загрузка!')">Играть</a></li>
     </ul>
 </nav>
 
@@ -142,3 +141,4 @@
 </body>
 
 </html>
+
