--- a/index.html
+++ b/index.html
@@ -8,23 +8,20 @@
 </head>
 <body>
     <!-- Навигация -->
-    <nav>
-        <div class="logo">
-            <span class="logo-icon">⚡</span>
-            <span class="logo-text">BLIZZ</span>
-            <span class="logo-blue">MOBILE</span>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html" class="active">Главная</a></li>
-            <li><a href="features.html">Возможности</a></li>
-            <li><a href="gallery.html">Галерея</a></li>
-            <li><a href="team.html">Руководство</a></li>
-        </ul>
-        <div class="nav-buttons">
-            <button class="forum-btn" onclick="window.open('https://blizmobile.hgweb.ru/index.php', '_blank')">💬 Форум</button>
-            <button class="play-btn" onclick="alert('Загрузка начнется в ближайшее время!')">▶ Играть</button>
-        </div>
-    </nav>
+<nav>
+    <div class="logo">
+        <span class="logo-icon">⚡</span>
+        <span class="logo-text">BLIZZ</span>
+        <span class="logo-blue">MOBILE</span>
+    </div>
+    <ul class="nav-links">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="features.html">Инфо</a></li>
+        <li><a href="team.html">Команда</a></li>
+        <li><a href="https://blizmobile.hgweb.ru/index.php" target="_blank" class="glow-forum">Форум</a></li>
+        <li><a href="#" class="glow-play" onclick="alert('Загрузка!')">Играть</a></li>
+    </ul>
+</nav>
 
     <!-- Hero секция -->
     <section class="hero">
@@ -206,4 +203,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
