Change branding from BLIZZ MOBILE to VORTEX MOBILE
Updated the HTML structure and content from 'BLIZZ MOBILE' to 'VORTEX MOBILE'. Adjusted titles, navigation, and footer information accordingly.

--- a/features.html
+++ b/features.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLIZZ MOBILE - Возможности</title>
+    <title>VORTEX MOBILE - Возможности</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Навигация -->
     <nav>
     <div class="logo">
         <span class="logo-icon">⚡</span>
-        <span class="logo-text">BLIZZ</span>
+        <span class="logo-text">VORTEX</span>
         <span class="logo-blue">MOBILE</span>
     </div>
     <ul class="nav-links">
@@ -23,13 +22,11 @@
     </ul>
 </nav>
 
-    <!-- Заголовок страницы -->
     <section class="page-header">
         <h1>Уникальные возможности</h1>
-        <p>Всё что тебе нужно для идеального игрового опыта</p>
+        <p>Всё что тебе нужно для идеального игрового опыта в VORTEX MOBILE</p>
     </section>
 
-    <!-- Возможности -->
     <section class="features">
         <div class="features-grid">
             <div class="feature-card">
@@ -75,13 +72,12 @@
         </div>
     </section>
 
-    <!-- Футер -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
                 <div class="footer-logo">
                     <span class="logo-icon">⚡</span>
-                    <span class="logo-text">BLIZZ</span>
+                    <span class="logo-text">VORTEX</span>
                     <span class="logo-blue">MOBILE</span>
                 </div>
                 <p class="footer-description">
@@ -128,9 +124,9 @@
 
         <div class="footer-bottom">
             <div class="footer-bottom-content">
-                <p>&copy; 2025 BLIZZ MOBILE. Все права защищены.</p>
+                <p>&copy; 2025 VORTEX MOBILE. Все права защищены.</p>
                 <p class="footer-disclaimer">
-                    Все материалы на сайте являются собственностью проекта BLIZZ MOBILE. 
+                    Все материалы на сайте являются собственностью проекта VORTEX MOBILE. 
                     Использование материалов без разрешения администрации запрещено.
                 </p>
             </div>
@@ -139,7 +135,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
-
-
