Change team page from BLIZZ MOBILE to VORTEX MOBILE
Updated the team page from 'BLIZZ MOBILE' to 'VORTEX MOBILE', including changes to the navigation, header, team members, and footer sections.

--- a/team.html
+++ b/team.html
@@ -1,18 +1,16 @@
-<!-- team.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLIZZ MOBILE - Руководство</title>
+    <title>VORTEX MOBILE - Руководство</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Навигация -->
-<nav>
+    <nav>
     <div class="logo">
         <span class="logo-icon">⚡</span>
-        <span class="logo-text">BLIZZ</span>
+        <span class="logo-text">VORTEX</span>
         <span class="logo-blue">MOBILE</span>
     </div>
     <ul class="nav-links">
@@ -24,13 +22,11 @@
     </ul>
 </nav>
 
-    <!-- Заголовок страницы -->
     <section class="page-header">
-        <h1>Руководство BLIZZ MOBILE</h1>
-        <p>Встречайте команду, которая создала это чудо</p>
+        <h1>Руководство VORTEX MOBILE</h1>
+        <p>Встречайте команду, которая создала этот мир</p>
     </section>
 
-    <!-- Президенты компании -->
     <section class="team-section">
         <div class="team-category">
             <div class="category-header">
@@ -59,7 +55,6 @@
             </div>
         </div>
 
-        <!-- Вице Президенты -->
         <div class="team-category">
             <div class="category-header">
                 <span class="category-icon">💼</span>
@@ -81,7 +76,6 @@
             </div>
         </div>
 
-        <!-- Основатель проекта -->
         <div class="team-category">
             <div class="category-header">
                 <span class="category-icon">⭐</span>
@@ -97,7 +91,6 @@
             </div>
         </div>
 
-        <!-- Руководители -->
         <div class="team-category">
             <div class="category-header">
                 <span class="category-icon">📋</span>
@@ -120,13 +113,12 @@
         </div>
     </section>
 
-    <!-- Футер -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
                 <div class="footer-logo">
                     <span class="logo-icon">⚡</span>
-                    <span class="logo-text">BLIZZ</span>
+                    <span class="logo-text">VORTEX</span>
                     <span class="logo-blue">MOBILE</span>
                 </div>
                 <p class="footer-description">
@@ -146,7 +138,7 @@
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="features.html">Возможности</a></li>
                     <li><a href="team.html">Руководство</a></li>
-                    <li><a href="#">Форум</a></li>
+                    <li><a href="gallery.html">Галерея</a></li>
                 </ul>
             </div>
 
@@ -173,9 +165,9 @@
 
         <div class="footer-bottom">
             <div class="footer-bottom-content">
-                <p>&copy; 2025 BLIZZ MOBILE. Все права защищены.</p>
+                <p>&copy; 2025 VORTEX MOBILE. Все права защищены.</p>
                 <p class="footer-disclaimer">
-                    Все материалы на сайте являются собственностью проекта BLIZZ MOBILE. 
+                    Все материалы на сайте являются собственностью проекта VORTEX MOBILE. 
                     Использование материалов без разрешения администрации запрещено.
                 </p>
             </div>
@@ -184,6 +176,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
-
